[SCB-2474](final task) Java17 Test paas on other modules (#2819)