@@ -22,6 +22,7 @@ import java.io.IOException;
 import java.net.URL;
 
 import org.apache.commons.lang3.StringUtils;
+import org.apache.commons.lang3.SystemUtils;
 import org.apache.maven.model.Model;
 import org.apache.maven.model.io.xpp3.MavenXpp3Reader;
 import org.slf4j.Logger;
@@ -196,6 +197,9 @@ public class Deploys {
     definition.setDeployName("baseProducer");
     definition.setCmd("it-producer");
     definition.setArgs(new String[] {itInstanceMaxHeapSizeOption});
+    if (!SystemUtils.IS_JAVA_1_8) {
+      definition.appendArgs(new String[] {"--add-opens", "java.base/java.lang=ALL-UNNAMED"});
+    }
     definition.setAppId("integration-test");
     definition.setMicroserviceName("it-producer");
     definition.setVersion(DEFAULT_MICROSERVICE_VERSION);
@@ -210,14 +214,16 @@ public class Deploys {
     definition.setDeployName("baseHttp2Producer");
     definition.setCmd("it-producer");
     definition.setArgs(new String[] {itInstanceMaxHeapSizeOption});
+    if (!SystemUtils.IS_JAVA_1_8) {
+      definition.appendArgs(new String[] {"--add-opens", "java.base/java.lang=ALL-UNNAMED"});
+    }
     URL urlServer = Thread.currentThread().getContextClassLoader().getResource("certificates/server.p12");
     URL urlTrust = Thread.currentThread().getContextClassLoader().getResource("certificates/trust.jks");
     if (urlServer != null && urlTrust != null) {
-      definition.setArgs(new String[] {"-Dservicecomb.rest.address=0.0.0.0:0?sslEnabled=true&protocol=http2",
-          itInstanceMaxHeapSizeOption,
-          "-Dservicecomb.highway.address=0.0.0.0:0?sslEnabled=true",
-          "-Dserver.p12=" + urlServer.getPath(),
-          "-Dtrust.jks=" + urlTrust.getPath()
+      definition.appendArgs(new String[] {"-Dservicecomb.rest.address=0.0.0.0:0?sslEnabled=true&protocol=http2",
+              "-Dservicecomb.highway.address=0.0.0.0:0?sslEnabled=true",
+              "-Dserver.p12=" + urlServer.getPath(),
+              "-Dtrust.jks=" + urlTrust.getPath()
       });
     }
     definition.setAppId("integration-test");
@@ -235,6 +241,9 @@ public class Deploys {
     definition.setCmd("it-producer");
     definition
         .setArgs(new String[] {"-Dservicecomb.rest.address=0.0.0.0:0?protocol=http2", itInstanceMaxHeapSizeOption});
+    if (!SystemUtils.IS_JAVA_1_8) {
+      definition.appendArgs(new String[] {"--add-opens", "java.base/java.lang=ALL-UNNAMED"});
+    }
     definition.setAppId("integration-test");
     definition.setMicroserviceName("it-producer-h2c");
     definition.setVersion(DEFAULT_MICROSERVICE_VERSION);
@@ -249,6 +258,9 @@ public class Deploys {
     definition.setDeployName("springBoot2ServletProducer");
     definition.setCmd("it-producer-deploy-springboot2-servlet");
     definition.setArgs(new String[] {itInstanceMaxHeapSizeOption});
+    if (!SystemUtils.IS_JAVA_1_8) {
+      definition.appendArgs(new String[] {"--add-opens", "java.base/java.lang=ALL-UNNAMED"});
+    }
     definition.setAppId("integration-test");
     definition.setMicroserviceName("it-producer-deploy-springboot2-servlet");
     definition.setVersion(DEFAULT_MICROSERVICE_VERSION);
@@ -263,6 +275,9 @@ public class Deploys {
     definition.setDeployName("springBoot2StandaloneProducer");
     definition.setCmd("it-producer-deploy-springboot2-standalone");
     definition.setArgs(new String[] {itInstanceMaxHeapSizeOption});
+    if (!SystemUtils.IS_JAVA_1_8) {
+      definition.appendArgs(new String[] {"--add-opens", "java.base/java.lang=ALL-UNNAMED"});
+    }
     definition.setAppId("integration-test");
     definition.setMicroserviceName("it-producer-deploy-springboot2-standalone");
     definition.setVersion(DEFAULT_MICROSERVICE_VERSION);
@@ -277,6 +292,9 @@ public class Deploys {
     definition.setDeployName("edge");
     definition.setCmd("it-edge");
     definition.setArgs(new String[] {itInstanceMaxHeapSizeOption});
+    if (!SystemUtils.IS_JAVA_1_8) {
+      definition.appendArgs(new String[] {"--add-opens", "java.base/java.lang=ALL-UNNAMED"});
+    }
     definition.setAppId("integration-test");
     definition.setMicroserviceName("it-edge");
     definition.setVersion(DEFAULT_MICROSERVICE_VERSION);
